// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expenses Summary component with multiple expenses 1`] = `
<div>
  Viewing 
  10
   
  expenses
   totalling
   
  5.003,40€
</div>
`;

exports[`Should render Expenses Summary component with one expense 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling
   
  2,40€
</div>
`;
